@@ -1,4 +1,9 @@
-2015-11-12  Gavin Smith  <gavinsmith0123@gmail.com>
+2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/texi2any.pl (BEGIN): Check if top_srcdir environment 
+	variable is defined.
+
+2015-11-14  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* configure.ac: Use _AC_OUTPUT_SUBDIRS macro inside a subshell.
 
